Try to fix chart

--- a/budget/2022.md
+++ b/budget/2022.md
@@ -19,16 +19,13 @@ layout: full-width
 
 Generally, it is best practice for non-profits to spend at least 80% of their funding on "Programs" - with the goal of getting to 85% or better. The FY22 budget forecasts the OWASP Foundation will spend 68.1% of its funds on Programming. A major goal is to get this to 80% by increasing revenue and maintaining low expenses through out the year.
 
-<div id="piechart"></div>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js" />
 <script type="text/javascript">
-// Load google charts
-google.charts.load('current', {'packages':['corechart']});
-google.charts.setOnLoadCallback(drawChart);
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
 
-// Draw the chart and set the chart values
-function drawChart() {
+      function drawChart() {
+
   var data = google.visualization.arrayToDataTable([
   ['Task', 'Expenses'],
   ['Events', 883140],
@@ -39,15 +36,17 @@ function drawChart() {
   ['Education', 55203],
   ['Diversity in AppSec', 45662]
    ]);
+        var options = {
+          'title':'OWASP Spending 2022'
+        };
 
-  // Optional; add a title and set the width and height of the chart
-  var options = {'title':'OWASP Spending 2022', 'width':550, 'height':400};
+        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
 
-  // Display the chart inside the <div> element with id="piechart"
-  var chart = new google.visualization.PieChart(document.getElementById('piechart'));
-  chart.draw(data, options);
-}
-</script>
+        chart.draw(data, options);
+      }
+    </script>
+
+<div id="piechart" style="width: 550px; height: 400px;"></div>
 
 APPROVED by Board of Directors at the [Special Board Meeting held on March 8, 2021](https://owasp.org/www-board/meetings-historical/202103-special-meeting.html)
 
