--- a/budget/2022.md
+++ b/budget/2022.md
@@ -1,54 +1,43 @@
 ---
 
-title: 2021 Budget
+title: 2022 Budget
 layout: full-width
 
 ---
 
 ## OWASP 2022 Budget
 
-### 2022 Financial Performance
+APPROVED by Board of Directors at the [January 2022 Board Meeting](https://owasp.org/www-board/meetings-historical/202201#motion-to-approve-the-2022-budget)
+
+
+### 2021 Financial Performance
+
+With the assistance of OWASP's 20th Anniversary, 2021 turned out to be a far better year than expected. The approved 2021 budget was exceeded in nearly all respects.
+
+| Description | Budgeted | Actual | Percent |
+|-------------|----------|-------|-------|
+| Income | $1,000,000 | $1,000,000 | 100% |
+| Expenses | $1,000,000 | $1,000,000 | 100% |
+
 
 ### 2022 Income Forecast
 
+Income in 2022 is projected to be $2.2 million, which is $1.1 million more than the 2021 actual.
+
 ### 2022 Expenses Forecast
 
+Expenses in 2022 are up by x% since 2021. This is a good time to invest as we start to come out of the COVID era.
+
+![Expenses](2022-budget-expense.png)
+
 ### Future outlook
+
+As we emerge from COVID, resuming in person events raises costs, but also raises income, which should only improve OWASP's financial performance. We continue to look for ways to reduce expenses, such as eliminating make work and consolidation of platforms, and invest in ways to reduce costs, such as the new Association Management Platform.
 
 ## Charity Spending Guidelines
 
 Generally, it is best practice for non-profits to spend at least 80% of their funding on "Programs" - with the goal of getting to 85% or better. The FY22 budget forecasts the OWASP Foundation will spend 68.1% of its funds on Programming. A major goal is to get this to 80% by increasing revenue and maintaining low expenses through out the year.
 
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js" />
-<script type="text/javascript">
-      google.charts.load('current', {'packages':['corechart']});
-      google.charts.setOnLoadCallback(drawChart);
-
-      function drawChart() {
-
-  var data = google.visualization.arrayToDataTable([
-  ['Task', 'Expenses'],
-  ['Events', 883140],
-  ['G&A', 513931],
-  ['Projects', 351813],
-  ['Chapters', 196672],
-  ['Outreach', 108009],
-  ['Education', 55203],
-  ['Diversity in AppSec', 45662]
-   ]);
-        var options = {
-          'title':'OWASP Spending 2022'
-        };
-
-        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
-
-        chart.draw(data, options);
-      }
-    </script>
-
-<div id="piechart" style="width: 550px; height: 400px;"></div>
-
-APPROVED by Board of Directors at the [Special Board Meeting held on March 8, 2021](https://owasp.org/www-board/meetings-historical/202103-special-meeting.html)
 
 ## FY 2022
 
