Update OWASP backronym: Web -> Worldwide

--- a/operating-plan/2020/2020.md
+++ b/operating-plan/2020/2020.md
@@ -49,7 +49,7 @@ The Foundation will establish a budget and process for reimbursable travel expen
 
 <a name="trademark"></a>
 ### Trademark Registration
-The Foundation will continue trademark registration efforts the following marks in the United States and European Union: OWASP, Open Web Application Security Project, Global AppSec, and AppSec Days. Additionally the Foundation will register our figure mark (logo) in these same three domiciles.  Once completed, the Foundation will develop and share a Trademark Guidelines document for events, chapters, and projects along with implementing these changes on our websites and event names. At this time, the Foundation does not expect to fund any enforcement activities.
+The Foundation will continue trademark registration efforts the following marks in the United States and European Union: OWASP, Open Worldwide Application Security Project, Global AppSec, and AppSec Days. Additionally the Foundation will register our figure mark (logo) in these same three domiciles.  Once completed, the Foundation will develop and share a Trademark Guidelines document for events, chapters, and projects along with implementing these changes on our websites and event names. At this time, the Foundation does not expect to fund any enforcement activities.
 
 <a name="kpi"></a>
 ### KPI Dashboard
